# real-time-ml-system-1

./: .gitignore  README.md  quix.yaml
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml  redpanda.yml
services/features_dashboard/: Makefile  pyproject.toml  setup_config.sh
services/features_dashboard/src/: backend.py  config.py  frontend.py  plot.py
services/kafka_to_feature_store/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/price_predictor/: Dockerfile  Makefile  README.md  app.yaml  pyproject.toml
services/price_predictor/src/: api.py  baseline_model.py  data_preprocessing.py  feature_engineering.py  model_factory.py  predictor.py  training.py  utils.py
services/price_predictor/tools/tools/: ohlc_data_writer.py
services/trade_producer/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_producer/src/kraken_api/: rest.py  trade.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/trade_to_ohlc/src/: config.py  main.py
tools/: pyproject.toml
tools/tools/: ohlc_data_reader.py
