[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["olaola-0 <isholamyson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.36.0"
loguru = "^0.7.2"
hopsworks = "^3.7.0"
pydantic-settings = "^2.3.4"
bokeh = "2.4.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]