[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["olaola-0 <isholamyson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ta-lib = "^0.4.31"
comet-ml = "^3.43.2"
pandas = "<2.2.0"
tools = {path = "tools"}
xgboost = "2.0.0"
loguru = "^0.7.2"
flask = "^3.0.3"
gunicorn = "^22.0.0"
scikit-learn = "^1.5.1"
optuna = "^3.6.1"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]